[package]
name = "rust_dx"
version = "0.1.0"
authors = ["Antti Kytö <antti.kytoe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.8"
user32-sys = "0.1.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "d3d11_4", "libloaderapi"] }
