[package]
name = "rust_dx"
version = "0.1.0"
authors = ["Antti Kytö <antti.kytoe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.9"
directx_math = "0.2.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "d3d11", "dxgi", "libloaderapi", "d3dcompiler", "winerror"] }
